@@ -1,5 +1,9 @@
 Revision history for Perl module Net::MAC::Vendor
 
+	* Compress::Bzip2 and Compress::Zlib are now optional prerequisites if
+	PUREPERL_ONLY=1 is specified as a Makefile.PL argument (or e.g. via `cpanm --pureperl`,
+	or PERL_MM_OPT=PUREPERL_ONLY=1 in the environment).
+
 1.262 2017-08-10T06:45:18Z
 	* Fix docs for load_cache (GitHub #23, Matt W.). Mojo::UserAgent
 	doesn't handle file://
